--- a/mainWindow.ui
+++ b/mainWindow.ui
@@ -194,7 +194,13 @@
      <height>22</height>
     </rect>
    </property>
+   <property name="defaultUp">
+    <bool>false</bool>
+   </property>
    <widget class="QMenu" name="menuSyncVideo">
+    <property name="tearOffEnabled">
+     <bool>false</bool>
+    </property>
     <property name="title">
      <string>Options</string>
     </property>
